Revise README with project details and setup steps
Updated README to reflect project structure and setup instructions.